# keyword-extractor

./: .gitignore  COMPLETION_CHECKLIST.md  README.md  main.py  quickstart.py  requirements.txt  setup.cfg  test_integration.py  todo.md
config/: config.yaml
data/taxonomy/: sector_descriptions.txt  sectors.json
docs/: ARCHITECTURE.md  PROJECT_SUMMARY.md  methodology.md  project_results_summary.md
notebooks/: 04_evaluation.ipynb
src/: __init__.py  controller.py  model.py  preprocessing.py
src/controllers/: __init__.py  controller.py
src/models/: __init__.py  evaluation.py  taxonomy.py
src/services/: __init__.py  classifier.py  embedder.py  extractor.py  filter.py  validator.py
src/utils/: __init__.py  preprocessing.py
tests/: test_evaluation.py  test_extractor.py  test_pipeline_e2e.py  test_preprocessing.py
