[metadata]
name = keyword-extractor
version = 1.0.0
description = Unsupervised NLP pipeline for sector-aware keyword extraction from German business descriptions (Handelsregister). Uses guided KeyBERT with NACE Rev. 2 taxonomy, multilingual sentence embeddings, and a 6-stage information-theoretic filter.
long_description = file: README.md
long_description_content_type = text/markdown
author = Dilay Dikbiyık
keywords =
    keyword extraction
    NLP
    KeyBERT
    sentence transformers
    sector classification
    NACE
    German
    multilingual
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Text Processing :: Linguistic
python_requires = >=3.9

[options]
packages = find:
package_dir =
    = src
install_requires =
    keybert>=0.8.0
    sentence-transformers>=2.6.0
    scikit-learn>=1.3.0
    pandas>=2.0.0
    numpy>=1.24.0
    nltk>=3.8.0
    langdetect>=1.0.9
    pyyaml>=6.0
    tqdm>=4.66.0

[options.extras_require]
llm =
    openai>=1.0.0
nlp =
    spacy>=3.6.0
dev =
    pytest>=7.4.0
    flake8>=6.0.0

[options.packages.find]
where = src
